--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.461.0",
     "@aws-sdk/client-s3": "^3.460.0",
+    "@aws-sdk/client-sqs": "^3.461.0",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "mustache": "^4.2.0",
     "puppeteer": "^21.5.2",
+    "winston": "^3.11.0",
     "xlsx": "^0.18.5"
   }
 }
