--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-dynamodb": "^3.461.0",
     "@aws-sdk/client-s3": "^3.460.0",
     "@aws-sdk/client-sqs": "^3.461.0",
+    "archiver": "^6.0.1",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
