--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "google-auth-library": "^9.4.1",
     "joi": "^17.11.0",
     "mustache": "^4.2.0",
+    "nodemailer": "^6.9.7",
     "puppeteer": "^21.5.2",
     "winston": "^3.11.0",
     "xlsx": "^0.18.5"
